--- a/client/src/components/portfolio/portfolio.css
+++ b/client/src/components/portfolio/portfolio.css
@@ -54,11 +54,12 @@
 .my-card-title{
     font-weight: 700;
     font-size: 24px;
-    white-space: nowrap;
     text-overflow: ellipsis;
     overflow: hidden;
-    max-width: 100%;
-    display: block;
+    display: -webkit-box;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    max-height: 60px;
 }
 
 .my-card-text {
